kubernetes/apps/network/external-services/app/voron/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: voron
subsets:
  - addresses:
      - ip: "${SECRET_VORON_IP}"
    ports:
      - name: http
        port: 80
        protocol: TCP
