kubernetes/apps/network/external-services/app/voron/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voron
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
